[metadata]
name = ovsdbapp
summary = A library for creating OVSDB applications
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://pypi.org/project/ovsdbapp/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    ovsdbapp

[compile_catalog]
directory = ovsdbapp/locale
domain = ovsdbapp

[update_catalog]
domain = ovsdbapp
output_dir = ovsdbapp/locale
input_file = ovsdbapp/locale/ovsdbapp.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ovsdbapp/locale/ovsdbapp.pot
